--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
     "react-router-dom": "^6.4.0",
